--- a/Improved_Plant_Species_Classification.ipynb
+++ b/Improved_Plant_Species_Classification.ipynb
@@ -18,12 +18,23 @@
       "mimetype": "text/x-python"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat_minor": 0,
   "nbformat": 4,
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SouadR0/seniorproject/blob/main/Improved_Plant_Species_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "source": [
         "\n",
@@ -45,7 +56,7 @@
         "import shutil #this allows you to access the functionality provided by the shutil module provided by the module to perform tasks such as copying, moving, renaming, and deleting files and directories, as well as handling archives, managing file permissions, and working with temporary files\n",
         "\n",
         "CHUNK_SIZE = 40960 #determine the numbers of row to read from the requested file\n",
-        "DATA_SOURCE_MAPPING = 'https://drive.google.com/drive/folders/1D9C77Pp60pCy2cg4N_tJpObFigOyPNTO'\n",
+        "DATA_SOURCE_MAPPING = 'https://github.com/SouadR0/seniorproject.git'\n",
         "#opens kaggle\n",
         "\n",
         "GDRIVE_INPUT_PATH='/gdrive/MyDrive/ColabNotebooks/KaggleDataset' #opens kaggle input section for the dataset\n",
@@ -162,6 +173,17 @@
         },
         "trusted": true,
         "id": "qq4mwJygGswK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_dir = '/kaggle/input/plant-dataset/Dataset/' #directory given by path, has 12 classes/folders with dataset images"
+      ],
+      "metadata": {
+        "id": "45Sv6PSQqwna"
       },
       "execution_count": null,
       "outputs": []
